# square-matrix-multiplication

./: CMakeLists.txt  Makefile  README.md  calculate
src/: calculate.c
