cmake_minimum_required(VERSION 3.11)
project(square-matrix-multiplication)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -mavx2 -mfma -ffast-math -Wall -Wpedantic -Wextra -std=gnu11 -I/usr/include/mkl -march=znver2 -mtune=znver2 -mllvm -enable-strided-vectorization")
file(GLOB SOURCES "src/*.c")
add_executable(calculate ${SOURCES})
find_package(BLAS REQUIRED)
if(BLAS_FOUND)
    target_link_libraries(calculate ${BLAS_LIBRARIES})
endif(BLAS_FOUND)
